; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_slab.c_obj_to_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_slab.c_obj_to_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kmem_cache = type { i32 }
%struct.slab = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kmem_cache*, %struct.slab*, i8*)* @obj_to_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @obj_to_index(%struct.kmem_cache* %0, %struct.slab* %1, i8* %2) #0 {
  %4 = alloca %struct.kmem_cache*, align 8
  %5 = alloca %struct.slab*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.kmem_cache* %0, %struct.kmem_cache** %4, align 8
  store %struct.slab* %1, %struct.slab** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = load %struct.slab*, %struct.slab** %5, align 8
  %10 = getelementptr inbounds %struct.slab, %struct.slab* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sext i32 %11 to i64
  %13 = sub i64 0, %12
  %14 = getelementptr i8, i8* %8, i64 %13
  store i8* %14, i8** %7, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load %struct.kmem_cache*, %struct.kmem_cache** %4, align 8
  %17 = getelementptr inbounds %struct.kmem_cache, %struct.kmem_cache* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @reciprocal_divide(i8* %15, i32 %18)
  ret i32 %19
}

declare dso_local i32 @reciprocal_divide(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
